# test_task

./: Dockerfile  README.md  pyproject.toml  setup.py
src/test_task/: build_index.py  main.py  qa.py  test.ipynb
templates/: index.html
